# swagger.yaml
@@ -2,10 +2,20 @@ basePath: /
 consumes:
 - application/json
 definitions:
+  GenericError:
+    description: GenericError is a generic error message returned by a server
+    properties:
+      message:
+        type: string
+        x-go-name: Message
+    type: object
+    x-go-package: github.com/iasonliu/product-api/handlers
   Product:
     description: Product defines the structure for an API product
     properties:
       description:
+        description: the description for this product
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
@@ -15,25 +25,38 @@ definitions:
         type: integer
         x-go-name: ID
       name:
+        description: the name for this product
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
     required:
     - id
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/iasonliu/product-api/data
-  Products:
-    description: Products is a collection of Product
-    items:
-      $ref: '#/definitions/Product'
-    type: array
-    x-go-package: github.com/iasonliu/product-api/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/iasonliu/product-api/handlers
 info:
   description: Documentation for Product API
   title: of Product API
@@ -48,35 +71,89 @@ paths:
           $ref: '#/responses/productsResponse'
       tags:
       - products
-  /products/{id}:
-    delete:
-      description: Returns a list of products
-      operationId: deleteProduct
+    post:
+      description: Create a new product
+      operationId: createProduct
       parameters:
       - description: |-
-          The id of the product to delete from the database
-          in: Path
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      responses:
+        "201":
+          $ref: '#/responses/productResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+        "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of the product for which the operation relates
         format: int64
-        in: query
+        in: path
         name: id
         required: true
         type: integer
         x-go-name: ID
       responses:
         "201":
-          $ref: '#/responses/noContent'
+          $ref: '#/responses/noContentResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+        "422":
+          $ref: '#/responses/errorValidation'
+      tags:
+      - products
+  /products/{id}:
+    delete:
+      description: Returns a list of products
+      operationId: deleteProduct
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
       tags:
       - products
 produces:
 - application/json
 responses:
-  noContent:
-    description: ""
+  errorResponse:
+    description: |-
+      NOTE: Types defined here are purely for documentation purposes
+      these types are not used by any of the handers
+      Generic error message returned as a string
+    schema:
+      $ref: '#/definitions/GenericError'
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  noContentResponse:
+    description: No content is returned by this API endpoint
+  productResponse:
+    description: Data structure representing a single product
+    schema:
+      $ref: '#/definitions/Product'
   productsResponse:
-    description: A list of products returns in the response
+    description: A list of products
     schema:
       items:
-        $ref: '#/definitions/Products'
+        $ref: '#/definitions/Product'
       type: array
 schemes:
 - http
